--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>Steaming Steel</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Train Game</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
+  <button id="fullscreenBtn">Go Fullscreen</button>
+  <div id="joystick"></div>
+  <canvas id="renderCanvas"></canvas>
+
+  <script src="https://cdn.babylonjs.com/babylon.js"></script>
+  <script src="joystick.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
