--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Train</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-database.js"></script>
-  <script src="firebase-config.js" type="module"></script>
+  <meta charset="UTF-8">
+  <title>Train Defense Multiplayer</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
-  <div id="joystickContainer"></div>
-
-  <script src="joystick.js"></script>
+  <canvas id="gameCanvas"></canvas>
+  <div id="joystickArea"></div>
+  <div id="multiplayer">
+    <button onclick="startHost()">Host Game</button>
+    <button onclick="joinGame()">Join Game</button>
+    <textarea id="signalData" placeholder="Paste signal here..."></textarea>
+    <button onclick="connectPeers()">Connect</button>
+  </div>
+  <script src="simple-peer.min.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
