--- a/index.html
+++ b/index.html
@@ -3,13 +3,26 @@
 <head>
   <title>Train Defense Game</title>
   <style>
-    canvas { background: #222; display: block; margin: 0 auto; touch-action: none; }
-    #upgradeMenu { position: absolute; top: 10px; right: 10px; background: #333; padding: 10px; border-radius: 8px; }
-    #upgradeMenu button { display: block; margin: 5px 0; padding: 6px 10px; }
+    html, body { margin: 0; padding: 0; overflow: hidden; }
+    canvas { display: block; touch-action: none; }
+    #upgradeMenu {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: #333;
+      color: white;
+      padding: 10px;
+      border-radius: 8px;
+    }
+    #upgradeMenu button {
+      display: block;
+      margin: 4px 0;
+      padding: 6px 10px;
+    }
   </style>
 </head>
 <body>
-  <canvas id="game" width="800" height="480"></canvas>
+  <canvas id="game"></canvas>
   <div id="upgradeMenu">
     <button onclick="upgradeTurret()">Upgrade Turret (5 coins)</button>
     <button onclick="upgradeArmor()">Upgrade Armor (3 coins)</button>
