--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Train Game</title>
+  <title>Train Survival Game</title>
   <style>
     html, body {
       margin: 0;
@@ -14,36 +14,13 @@
     }
     canvas {
       display: block;
-      background: #333;
+      background: #111;
     }
-    #joystickContainer {
+    #fireButton, #reloadButton, #upgradeButton {
       position: absolute;
       bottom: 20px;
-      left: 20px;
-      width: 100px;
-      height: 100px;
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 50%;
-      touch-action: none;
-      user-select: none;
-    }
-    #joystick {
-      position: absolute;
-      left: 35px;
-      top: 35px;
-      width: 30px;
-      height: 30px;
-      background: rgba(255, 255, 255, 0.7);
-      border-radius: 50%;
-      pointer-events: none;
-    }
-    #fireButton {
-      position: absolute;
-      bottom: 20px;
-      right: 20px;
       width: 80px;
       height: 80px;
-      background: rgba(200, 0, 0, 0.8);
       border-radius: 50%;
       display: flex;
       align-items: center;
@@ -52,131 +29,152 @@
       cursor: pointer;
       user-select: none;
     }
+    #fireButton { right: 20px; background: rgba(200, 0, 0, 0.8); }
+    #reloadButton { right: 120px; background: rgba(0, 200, 0, 0.8); }
+    #upgradeButton { right: 220px; background: rgba(0, 0, 200, 0.8); }
     #hud {
       position: absolute;
       top: 10px;
       left: 10px;
-      line-height: 1.5;
       background: rgba(0,0,0,0.5);
       padding: 10px;
       border-radius: 8px;
+      font-size: 16px;
+    }
+    #upgradeMenu {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.8);
+      color: #fff;
+      z-index: 1000;
+      text-align: center;
+      padding-top: 50px;
+    }
+    #upgradeMenu h2 { margin-top: 0; }
+    .upgradeOption {
+      margin: 10px;
+      padding: 10px;
+      background: rgba(255,255,255,0.1);
+      border: 1px solid #fff;
+      cursor: pointer;
+    }
+    .upgradeOption:hover {
+      background: rgba(255,255,255,0.2);
+    }
+    #doneButton {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background: green;
+      border: none;
+      font-size: 16px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
   <canvas id="gameCanvas"></canvas>
-  <div id="joystickContainer">
-    <div id="joystick"></div>
-  </div>
   <div id="fireButton">Fire</div>
-  <div id="hud">
-    <div id="stats"></div>
+  <div id="reloadButton">Reload</div>
+  <div id="upgradeButton">Upgrade</div>
+  <div id="hud"></div>
+  <div id="upgradeMenu">
+    <h2>Upgrade Menu</h2>
+    <div id="resourceStatus"></div>
+    <div id="upgradeOptions"></div>
+    <button id="doneButton">Done</button>
   </div>
   <script>
-    const canvas = document.getElementById("gameCanvas");
-    const ctx = canvas.getContext("2d");
+    const canvas = document.getElementById("gameCanvas"),
+          ctx = canvas.getContext("2d");
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
 
-    const train = {
+    let gamePaused = false;
+    let upgradeMenuOpen = false;
+    let resources = { wood: 0, metal: 0, steel: 0, energy: 0 };
+
+    let train = {
       x: 100,
       y: canvas.height / 2 - 25,
       w: 100,
       h: 50,
       hp: 100,
-      armor: 50,
-      shield: 30,
-      inventory: [],
+      ammo: 64,
       speed: 2,
-      gunOffsetX: 80,
-      gunOffsetY: 15
+      color: "#8B4513",
+      upgradeLevel: 0
     };
+
+    let autoTurretInstalled = false;
+    let autoTurretLastTime = Date.now();
+    const autoTurretCooldown = 1000;
 
     let bullets = [];
     let enemies = [];
+    let loot = [];
     let wave = 1;
-    let enemySpawnInterval = 2000;
-    let lastEnemySpawn = 0;
-    let waveDuration = 10000;
     let lastWaveTime = Date.now();
 
-    const joystickContainer = document.getElementById("joystickContainer");
-    const joystick = document.getElementById("joystick");
-    let joystickActive = false;
-    let startX, startY, currentX, currentY;
+    const shootSound = new Audio("shoot.wav");
+    const reloadSound = new Audio("reload.wav");
 
-    function getJoystickDelta() {
-      const dx = currentX - startX;
-      const dy = currentY - startY;
-      const maxDistance = 40;
-      let distance = Math.sqrt(dx * dx + dy * dy);
-      if (distance > maxDistance) {
-        let scale = maxDistance / distance;
-        return { dx: dx * scale, dy: dy * scale };
+    document.getElementById("fireButton").addEventListener("click", () => {
+      if (train.ammo > 0 && !gamePaused) {
+        bullets.push({ x: train.x + 80, y: train.y + 15, radius: 5, speed: 7 });
+        train.ammo--;
+        shootSound.play();
       }
-      return { dx, dy };
+    });
+
+    document.getElementById("reloadButton").addEventListener("click", () => {
+      if (!gamePaused && !train.isReloading) {
+        train.isReloading = true;
+        setTimeout(() => { train.ammo = 64; train.isReloading = false; reloadSound.play(); }, 200);
+      }
+    });
+
+    document.getElementById("upgradeButton").addEventListener("click", () => {
+      openUpgradeMenu();
+    });
+
+    window.addEventListener("resize", () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    });
+
+    function isCollidingRectCircle(rect, circle) {
+      let distX = Math.abs(circle.x - rect.x - rect.w / 2);
+      let distY = Math.abs(circle.y - rect.y - rect.h / 2);
+      if (distX > (rect.w / 2 + circle.radius)) return false;
+      if (distY > (rect.h / 2 + circle.radius)) return false;
+      if (distX <= (rect.w / 2)) return true;
+      if (distY <= (rect.h / 2)) return true;
+      let dx = distX - rect.w / 2;
+      let dy = distY - rect.h / 2;
+      return (dx * dx + dy * dy <= (circle.radius * circle.radius));
     }
 
-    joystickContainer.addEventListener("pointerdown", (e) => {
-      joystickActive = true;
-      startX = e.clientX;
-      startY = e.clientY;
-      currentX = e.clientX;
-      currentY = e.clientY;
-      joystick.style.left = "35px";
-      joystick.style.top = "35px";
-    });
+    function isCollidingRect(a, b) {
+      return a.x < b.x + b.w && a.x + a.w > b.x &&
+             a.y < b.y + b.h && a.y + a.h > b.y;
+    }
 
-    joystickContainer.addEventListener("pointermove", (e) => {
-      if (!joystickActive) return;
-      currentX = e.clientX;
-      currentY = e.clientY;
-      const delta = getJoystickDelta();
-      joystick.style.left = `${35 + delta.dx}px`;
-      joystick.style.top = `${35 + delta.dy}px`;
-    });
-
-    joystickContainer.addEventListener("pointerup", () => {
-      joystickActive = false;
-      joystick.style.left = "35px";
-      joystick.style.top = "35px";
-    });
-
-    joystickContainer.addEventListener("pointercancel", () => {
-      joystickActive = false;
-      joystick.style.left = "35px";
-      joystick.style.top = "35px";
-    });
-
-    const fireButton = document.getElementById("fireButton");
-    fireButton.addEventListener("click", () => {
-      fireBullet();
-    });
-
-    function fireBullet() {
-      bullets.push({
-        x: train.x + train.gunOffsetX,
-        y: train.y + train.gunOffsetY + 10,
-        radius: 5,
-        speed: 7
-      });
+    function drawHealthBar(x, y, w, h, percent, color) {
+      ctx.fillStyle = "#000";
+      ctx.fillRect(x, y, w, h);
+      ctx.fillStyle = color;
+      ctx.fillRect(x, y, w * percent, h);
     }
 
     function spawnEnemy() {
       let isBoss = false;
-      if (wave % 10 === 0 && enemies.length === 0) {
+      if (wave % 10 === 0 && enemies.filter(e => e.isBoss).length === 0) { 
         isBoss = true;
-      }
-      if (isBoss) {
-        enemies.push({
-          x: canvas.width,
-          y: canvas.height / 2 - 50,
-          w: 100,
-          h: 100,
-          hp: 200,
-          speed: 1.5,
-          isBoss: true
-        });
+        enemies.push({ x: canvas.width, y: canvas.height / 2 - 50, w: 100, h: 100, hp: 200, speed: 1.5, isBoss: true });
       } else {
         const enemySize = 40;
         enemies.push({
@@ -184,44 +182,109 @@
           y: Math.random() * (canvas.height - enemySize),
           w: enemySize,
           h: enemySize,
-          hp: 20 + wave * 2,
+          hp: 30 + wave * 2,
           speed: 1 + wave * 0.1,
           isBoss: false
         });
       }
     }
 
-    function isColliding(a, b) {
-      return a.x < b.x + b.w &&
-             a.x + a.w > b.x &&
-             a.y < b.y + b.h &&
-             a.y + a.h > b.y;
-    }
-    
-    function isPointInRect(point, rect) {
-      return point.x > rect.x && point.x < rect.x + rect.w &&
-             point.y > rect.y && point.y < rect.y + rect.h;
-    }
-
-    function update() {
-      const now = Date.now();
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      if (joystickActive) {
-        const delta = getJoystickDelta();
-        const mag = Math.sqrt(delta.dx * delta.dx + delta.dy * delta.dy);
-        if (mag > 1) {
-          train.x += (delta.dx / mag) * train.speed;
-          train.y += (delta.dy / mag) * train.speed;
-          train.x = Math.max(0, Math.min(canvas.width - train.w, train.x));
-          train.y = Math.max(0, Math.min(canvas.height - train.h, train.y));
+    function dropLoot(x, y, isBoss) {
+      loot.push({ type: "wood", x: x, y: y, spawnTime: Date.now() });
+      loot.push({ type: "metal", x: x + 10, y: y, spawnTime: Date.now() });
+      if (isBoss) {
+        loot.push({ type: "steel", x: x + 20, y: y, spawnTime: Date.now() });
+        loot.push({ type: "energy", x: x + 30, y: y, spawnTime: Date.now() });
+      } else {
+        if (Math.random() < 0.12) {
+          loot.push({ type: "steel", x: x + 20, y: y, spawnTime: Date.now() });
+        }
+        if (Math.random() < 0.12) {
+          loot.push({ type: "energy", x: x + 30, y: y, spawnTime: Date.now() });
         }
       }
+    }
 
-      ctx.fillStyle = "#00f";
+    function openUpgradeMenu() {
+      gamePaused = true;
+      upgradeMenuOpen = true;
+      document.getElementById("upgradeMenu").style.display = "block";
+      updateUpgradeMenu();
+    }
+    function updateUpgradeMenu() {
+      document.getElementById("resourceStatus").innerHTML = `<p>Resources: Wood: ${resources.wood} | Metal: ${resources.metal} | Steel: ${resources.steel} | Energy: ${resources.energy}</p>`;
+      let optionsHTML = "";
+      if (train.upgradeLevel === 0) {
+        optionsHTML += `<div class="upgradeOption" onclick="upgradeToPolished()">Upgrade to Polished Wood (Cost: 5 Wood, +15 HP)</div>`;
+      } else if (train.upgradeLevel === 1) {
+        optionsHTML += `<div class="upgradeOption" onclick="upgradeToSteel()">Upgrade to Steel (Cost: 3 Steel & 3 Metal, +25 HP)</div>`;
+      }
+      optionsHTML += `<div class="upgradeOption" onclick="upgradeSpeed()">Increase Speed (Cost: 5 Metal, +0.5 Speed)</div>`;
+      if (!autoTurretInstalled) {
+        optionsHTML += `<div class="upgradeOption" onclick="installAutoTurret()">Install Auto-Turret (Cost: 3 Energy)</div>`;
+      }
+      document.getElementById("upgradeOptions").innerHTML = optionsHTML;
+    }
+    function upgradeToPolished() {
+      if (resources.wood >= 5) {
+        resources.wood -= 5;
+        train.upgradeLevel = 1;
+        train.hp += 15;
+        train.color = "#CD853F";
+        updateUpgradeMenu();
+      } else { alert("Not enough Wood!"); }
+    }
+    function upgradeToSteel() {
+      if (resources.steel >= 3 && resources.metal >= 3) {
+        resources.steel -= 3;
+        resources.metal -= 3;
+        train.upgradeLevel = 2;
+        train.hp += 25;
+        train.color = "#C0C0C0";
+        updateUpgradeMenu();
+      } else { alert("Not enough Steel or Metal!"); }
+    }
+    function upgradeSpeed() {
+      if (resources.metal >= 5) {
+        resources.metal -= 5;
+        train.speed += 0.5;
+        updateUpgradeMenu();
+      } else { alert("Not enough Metal!"); }
+    }
+    function installAutoTurret() {
+      if (resources.energy >= 3) {
+        resources.energy -= 3;
+        autoTurretInstalled = true;
+        updateUpgradeMenu();
+      } else { alert("Not enough Energy!"); }
+    }
+    document.getElementById("doneButton").addEventListener("click", () => {
+      document.getElementById("upgradeMenu").style.display = "none";
+      upgradeMenuOpen = false;
+      gamePaused = false;
+    });
+
+    function update() {
+      if (gamePaused) { requestAnimationFrame(update); return; }
+      let now = Date.now();
+      let timeCycle = (now / 1000) % 20;
+      ctx.fillStyle = timeCycle < 10 ? "#444" : "#111";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      if (now - lastWaveTime > 10000) {
+        wave++;
+        spawnEnemy();
+        lastWaveTime = now;
+      }
+
+      if (autoTurretInstalled && now - autoTurretLastTime > autoTurretCooldown) {
+        bullets.push({ x: train.x + 80, y: train.y + 15, radius: 5, speed: 7 });
+        autoTurretLastTime = now;
+      }
+
+      ctx.fillStyle = train.color;
       ctx.fillRect(train.x, train.y, train.w, train.h);
-      ctx.fillStyle = "#fff";
-      ctx.fillRect(train.x + train.gunOffsetX, train.y + train.gunOffsetY, 20, 10);
+      drawHealthBar(train.x, train.y - 10, train.w, 5, train.hp / 100, "#0f0");
 
       for (let i = bullets.length - 1; i >= 0; i--) {
         let b = bullets[i];
@@ -232,67 +295,78 @@
         ctx.fill();
         if (b.x > canvas.width) {
           bullets.splice(i, 1);
-          continue;
-        }
-        for (let j = enemies.length - 1; j >= 0; j--) {
-          let enemy = enemies[j];
-          if (isPointInRect({x: b.x, y: b.y}, enemy)) {
-            enemy.hp -= 20;
-            bullets.splice(i, 1);
-            if (enemy.hp <= 0) {
-              train.inventory.push("coin");
-              enemies.splice(j, 1);
+        } else {
+          for (let j = enemies.length - 1; j >= 0; j--) {
+            let e = enemies[j];
+            if (isCollidingRectCircle(e, b)) {
+              e.hp -= 20;
+              bullets.splice(i, 1);
+              if (e.hp <= 0) {
+                dropLoot(e.x, e.y, e.isBoss);
+                enemies.splice(j, 1);
+              }
+              break;
             }
-            break;
           }
         }
       }
 
-      if (now - lastEnemySpawn > enemySpawnInterval && now - lastWaveTime > 500) {
-        spawnEnemy();
-        lastEnemySpawn = now;
-      }
-
       for (let i = enemies.length - 1; i >= 0; i--) {
-        let enemy = enemies[i];
-        enemy.x -= enemy.speed;
-        ctx.fillStyle = enemy.isBoss ? "#f00" : "#a00";
-        ctx.fillRect(enemy.x, enemy.y, enemy.w, enemy.h);
-        
-        if (isColliding(train, enemy)) {
-          let damage = enemy.isBoss ? 30 : 10;
-          let effectiveDamage = damage - train.armor * 0.05 - train.shield * 0.03;
-          train.hp -= Math.max(effectiveDamage, 1);
+        let e = enemies[i];
+        e.x -= e.speed;
+        ctx.fillStyle = e.isBoss ? "#f00" : "#a00";
+        ctx.fillRect(e.x, e.y, e.w, e.h);
+        if (isCollidingRect(train, e)) {
+          let damage = e.isBoss ? 30 : 10;
+          train.hp -= Math.max(damage, 1);
           enemies.splice(i, 1);
         }
       }
 
-      if (now - lastWaveTime > waveDuration) {
-        wave++;
-        train.speed += 0.2;
-        train.hp = Math.min(train.hp + 20, 100);
-        enemySpawnInterval = Math.max(enemySpawnInterval - 100, 800);
-        lastWaveTime = now;
+      for (let i = loot.length - 1; i >= 0; i--) {
+        let item = loot[i];
+        if (now - item.spawnTime > 7000) {
+          loot.splice(i, 1);
+        } else {
+          if (isCollidingRect(train, { x: item.x, y: item.y, w: 20, h: 20 })) {
+            if (item.type === "wood") resources.wood++;
+            else if (item.type === "metal") resources.metal++;
+            else if (item.type === "steel") resources.steel++;
+            else if (item.type === "energy") resources.energy++;
+            loot.splice(i, 1);
+            continue;
+          }
+          ctx.save();
+          if (item.type === "wood") {
+            ctx.fillStyle = "#8B4513";
+          } else if (item.type === "metal") {
+            ctx.fillStyle = "#AAAAAA";
+          } else if (item.type === "steel" || item.type === "energy") {
+            ctx.shadowBlur = 20;
+            ctx.shadowColor = "cyan";
+            ctx.fillStyle = item.type === "steel" ? "#C0C0C0" : "#0ff";
+          }
+          ctx.beginPath();
+          ctx.arc(item.x, item.y, 10, 0, Math.PI * 2);
+          ctx.fill();
+          ctx.restore();
+        }
       }
 
-      const statsDiv = document.getElementById("stats");
-      statsDiv.innerHTML = `
-        <strong>Wave:</strong> ${wave} <br/>
-        <strong>HP:</strong> ${Math.floor(train.hp)} <br/>
-        <strong>Armor:</strong> ${train.armor} <br/>
-        <strong>Shield:</strong> ${train.shield} <br/>
-        <strong>Inventory:</strong> ${train.inventory.join(", ") || "None"}
-      `;
+      document.getElementById("hud").innerHTML = `Wave: ${wave} | HP: ${Math.floor(train.hp)} | Ammo: ${train.ammo} | Resources - Wood: ${resources.wood}, Metal: ${resources.metal}, Steel: ${resources.steel}, Energy: ${resources.energy}`;
+
+      if (train.hp <= 0) {
+        ctx.fillStyle = "#000a";
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
+        ctx.fillStyle = "#fff";
+        ctx.font = "40px sans-serif";
+        ctx.fillText("Game Over", canvas.width / 2 - 100, canvas.height / 2);
+        return;
+      }
 
       requestAnimationFrame(update);
     }
-
     update();
-
-    window.addEventListener("resize", () => {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-    });
   </script>
 </body>
 </html>
