--- a/index.html
+++ b/index.html
@@ -122,7 +122,6 @@
     let upgradeMenuOpen = false;
     let resources = { wood: 0, metal: 0, steel: 0, energy: 0 };
 
-    // Train now starts fast (speed: 4) and will be smoothly animated.
     let train = {
       x: 100,
       y: canvas.height / 2 - 25,
@@ -130,7 +129,7 @@
       h: 50,
       hp: 100,
       ammo: 64,
-      speed: 4,
+      speed: 2,
       color: "#8B4513",
       upgradeLevel: 0
     };
@@ -148,7 +147,7 @@
     const shootSound = new Audio("shoot.wav");
     const reloadSound = new Audio("reload.wav");
 
-    // WASD controls
+    // WASD control
     const keys = { w: false, a: false, s: false, d: false };
     window.addEventListener("keydown", e => {
       if (e.key.toLowerCase() === "w") keys.w = true;
@@ -163,7 +162,7 @@
       if (e.key.toLowerCase() === "d") keys.d = false;
     });
 
-    // Joystick controls
+    // Joystick control
     let joystickActive = false, jsStartX = 0, jsStartY = 0, jsDelta = {dx: 0, dy: 0};
     const joystickContainer = document.getElementById("joystickContainer");
     const joystick = document.getElementById("joystick");
@@ -176,7 +175,7 @@
       if (!joystickActive) return;
       let dx = e.clientX - jsStartX, dy = e.clientY - jsStartY;
       const maxDist = 40;
-      let dist = Math.hypot(dx, dy);
+      let dist = Math.sqrt(dx*dx+dy*dy);
       if (dist > maxDist) { let scale = maxDist/dist; dx *= scale; dy *= scale; }
       jsDelta = { dx, dy };
       joystick.style.left = `${35 + dx}px`;
@@ -220,14 +219,14 @@
     });
 
     function isCollidingRectCircle(rect, circle) {
-      let distX = Math.abs(circle.x - rect.x - rect.w/2);
-      let distY = Math.abs(circle.y - rect.y - rect.h/2);
-      if (distX > (rect.w/2 + circle.radius)) return false;
-      if (distY > (rect.h/2 + circle.radius)) return false;
-      if (distX <= (rect.w/2)) return true;
-      if (distY <= (rect.h/2)) return true;
-      let dx = distX - rect.w/2, dy = distY - rect.h/2;
-      return (dx*dx + dy*dy <= (circle.radius*circle.radius));
+      let distX = Math.abs(circle.x - rect.x - rect.w / 2);
+      let distY = Math.abs(circle.y - rect.y - rect.h / 2);
+      if (distX > (rect.w / 2 + circle.radius)) return false;
+      if (distY > (rect.h / 2 + circle.radius)) return false;
+      if (distX <= (rect.w / 2)) return true;
+      if (distY <= (rect.h / 2)) return true;
+      let dx = distX - rect.w / 2, dy = distY - rect.h / 2;
+      return (dx * dx + dy * dy <= (circle.radius * circle.radius));
     }
 
     function isCollidingRect(a, b) {
@@ -246,7 +245,7 @@
       let isBoss = false;
       if (wave % 10 === 0 && enemies.filter(e => e.isBoss).length === 0) {
         isBoss = true;
-        enemies.push({ x: canvas.width, y: canvas.height/2 - 50, w: 100, h: 100, hp: 200, speed: 1.5, isBoss: true });
+        enemies.push({ x: canvas.width, y: canvas.height / 2 - 50, w: 100, h: 100, hp: 200, speed: 1.5, isBoss: true });
       } else {
         const enemySize = 40;
         enemies.push({
@@ -254,7 +253,7 @@
           y: Math.random() * (canvas.height - enemySize),
           w: enemySize,
           h: enemySize,
-          hp: 30 + wave*2,
+          hp: 30 + wave * 2,
           speed: 1 + wave * 0.1,
           isBoss: false
         });
@@ -263,13 +262,17 @@
 
     function dropLoot(x, y, isBoss) {
       loot.push({ type: "wood", x: x, y: y, spawnTime: Date.now() });
-      loot.push({ type: "metal", x: x+10, y: y, spawnTime: Date.now() });
+      loot.push({ type: "metal", x: x + 10, y: y, spawnTime: Date.now() });
       if (isBoss) {
-        loot.push({ type: "steel", x: x+20, y: y, spawnTime: Date.now() });
-        loot.push({ type: "energy", x: x+30, y: y, spawnTime: Date.now() });
+        loot.push({ type: "steel", x: x + 20, y: y, spawnTime: Date.now() });
+        loot.push({ type: "energy", x: x + 30, y: y, spawnTime: Date.now() });
       } else {
-        if (Math.random() < 0.12) loot.push({ type: "steel", x: x+20, y: y, spawnTime: Date.now() });
-        if (Math.random() < 0.12) loot.push({ type: "energy", x: x+30, y: y, spawnTime: Date.now() });
+        if (Math.random() < 0.12) {
+          loot.push({ type: "steel", x: x + 20, y: y, spawnTime: Date.now() });
+        }
+        if (Math.random() < 0.12) {
+          loot.push({ type: "energy", x: x + 30, y: y, spawnTime: Date.now() });
+        }
       }
     }
 
@@ -283,13 +286,15 @@
       document.getElementById("resourceStatus").innerHTML =
         `<p>Resources: Wood: ${resources.wood} | Metal: ${resources.metal} | Steel: ${resources.steel} | Energy: ${resources.energy}</p>`;
       let optionsHTML = "";
-      if (train.upgradeLevel === 0)
+      if (train.upgradeLevel === 0) {
         optionsHTML += `<div class="upgradeOption" onclick="upgradeToPolished()">Upgrade to Polished Wood (Cost: 5 Wood, +15 HP)</div>`;
-      else if (train.upgradeLevel === 1)
+      } else if (train.upgradeLevel === 1) {
         optionsHTML += `<div class="upgradeOption" onclick="upgradeToSteel()">Upgrade to Steel (Cost: 3 Steel & 3 Metal, +25 HP)</div>`;
+      }
       optionsHTML += `<div class="upgradeOption" onclick="upgradeSpeed()">Increase Speed (Cost: 5 Metal, +0.5 Speed)</div>`;
-      if (!autoTurretInstalled)
+      if (!autoTurretInstalled) {
         optionsHTML += `<div class="upgradeOption" onclick="installAutoTurret()">Install Auto-Turret (Cost: 3 Energy)</div>`;
+      }
       document.getElementById("upgradeOptions").innerHTML = optionsHTML;
     }
     function upgradeToPolished() {
@@ -299,7 +304,7 @@
         train.hp += 15;
         train.color = "#CD853F";
         updateUpgradeMenu();
-      } else alert("Not enough Wood!");
+      } else { alert("Not enough Wood!"); }
     }
     function upgradeToSteel() {
       if (resources.steel >= 3 && resources.metal >= 3) {
@@ -309,21 +314,21 @@
         train.hp += 25;
         train.color = "#C0C0C0";
         updateUpgradeMenu();
-      } else alert("Not enough Steel or Metal!");
+      } else { alert("Not enough Steel or Metal!"); }
     }
     function upgradeSpeed() {
       if (resources.metal >= 5) {
         resources.metal -= 5;
         train.speed += 0.5;
         updateUpgradeMenu();
-      } else alert("Not enough Metal!");
+      } else { alert("Not enough Metal!"); }
     }
     function installAutoTurret() {
       if (resources.energy >= 3) {
         resources.energy -= 3;
         autoTurretInstalled = true;
         updateUpgradeMenu();
-      } else alert("Not enough Energy!");
+      } else { alert("Not enough Energy!"); }
     }
     document.getElementById("doneButton").addEventListener("click", () => {
       document.getElementById("upgradeMenu").style.display = "none";
@@ -331,13 +336,9 @@
       gamePaused = false;
     });
 
-    let lastFrameTime = performance.now();
     function update() {
       if (gamePaused) { requestAnimationFrame(update); return; }
-      let now = performance.now();
-      let dt = (now - lastFrameTime) / 16; // normalization factor (approx. 60fps)
-      lastFrameTime = now;
-
+      let now = Date.now();
       ctx.fillStyle = ((now / 1000) % 20) < 10 ? "#444" : "#111";
       ctx.fillRect(0, 0, canvas.width, canvas.height);
 
@@ -352,7 +353,7 @@
         autoTurretLastTime = now;
       }
 
-      // WASD + Joystick movement (movement is now dt-adjusted for smoother interpolation)
+      // WASD & Joystick movement
       let moveX = 0, moveY = 0;
       if (keys.w) moveY -= 1;
       if (keys.s) moveY += 1;
@@ -364,8 +365,8 @@
       if (mag > 0) {
         moveX /= mag;
         moveY /= mag;
-        train.x += moveX * train.speed * dt;
-        train.y += moveY * train.speed * dt;
+        train.x += moveX * train.speed;
+        train.y += moveY * train.speed;
         train.x = Math.max(0, Math.min(canvas.width - train.w, train.x));
         train.y = Math.max(0, Math.min(canvas.height - train.h, train.y));
       }
@@ -376,7 +377,7 @@
 
       for (let i = bullets.length - 1; i >= 0; i--) {
         let b = bullets[i];
-        b.x += b.speed * dt;
+        b.x += b.speed;
         ctx.beginPath();
         ctx.arc(b.x, b.y, b.radius, 0, Math.PI * 2);
         ctx.fillStyle = "#ff0";
@@ -401,7 +402,7 @@
 
       for (let i = enemies.length - 1; i >= 0; i--) {
         let e = enemies[i];
-        e.x -= e.speed * dt;
+        e.x -= e.speed;
         ctx.fillStyle = e.isBoss ? "#f00" : "#a00";
         ctx.fillRect(e.x, e.y, e.w, e.h);
         if (isCollidingRect(train, e)) {
@@ -452,6 +453,7 @@
         ctx.fillText("Game Over", canvas.width / 2 - 100, canvas.height / 2);
         return;
       }
+
       requestAnimationFrame(update);
     }
     update();
